--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@ h1 {
     gap: 10px;
 }
 
+.main-wrapper .links img, .main-wrapper .links svg  {
+    width: 32px;
+    height: 32px;
+}
+
 .contact-wrapper {
     height: 100vh;
     width: 100%;
